@@ -13,6 +13,7 @@ Version 0.3.beta1
 - Added new IsotopeOrder class, checkout can now be done from postsale request
 - Added button to duplicate the fallback language to a language record
 - Added multi-edit support for products and variant data
+- Added minimum order subtotal amount (store config option)
 - Added: Copy child records (variants, languages) when copying a product
 - Added: Allow foreignKey for variant attribute options
 - Added: Show theme templates in product type select menu
